--- a/client/src/components/InputField/InputField.module.css
+++ b/client/src/components/InputField/InputField.module.css
@@ -21,6 +21,7 @@
     align-items: center;
     align-self: stretch;
     transition: 0.25s ease all;
+    font-size: 1rem;
     display: flex;
     padding: 0.75rem 1.25rem;
     border: 1px solid var(--bg-outline);
